# team

./: .gitignore  LICENSE  LICENSE.md  README.md  RWS2.py  RWS_wrapper.py  azure-pipelines.yml  environment.yml  load_example_data.py  pyproject.toml  requirements.txt  setup.cfg
.dvc/: config
.github/workflows/: python.yml
RAPID_code/joint_control/: joint_control.pgf  mainmodule.modx
RAPID_code/read_text_file/: mainmodule.modx
abb_controller_scripts/joint_control_from_textfile/: joint_control_from_textfile.pgf  mainmodule.modx
abb_controller_scripts/linear_move/: CalibData.modx  mainmodule.modx
arco/learning_from_demo/: aligned_trajectories.py  data_preprocessing.py  demonstration_player.py  demonstration_recorder.py  dmp_trajectory.py  dynamical_movement_primitives.py  gaussian_mixture_regression.py  play_demo.py  probabilistic_encoding.py  record_demo.py  trajectories.py  trajectory.py  trajectory_base.py
arco/scripts/: data_validation.py  player.py  playing.py  recorder.py  recording.py
arco/utility/: accuracy_metric.py  dmp_visualization.py  gmm_visualization.py  handling_data.py  visualization.py
demonstrations/: test_axis.json  test_data.json
demonstrations/approaching/: .gitignore  approaching_amk_1.json.dvc  approaching_amk_2.json.dvc  approaching_amk_3.json.dvc  approaching_amk_4.json.dvc  approaching_ar_1.json.dvc  approaching_ar_2.json.dvc  approaching_ar_3.json.dvc  approaching_ar_4.json.dvc  approaching_jz_1.json.dvc  approaching_jz_2.json.dvc  approaching_jz_3.json.dvc  approaching_jz_4.json.dvc  approaching_lp_1.json.dvc  approaching_lp_2.json.dvc  approaching_lp_3.json.dvc  approaching_lp_4.json.dvc  approaching_mh_1.json.dvc  approaching_mh_2.json.dvc  approaching_mh_3.json.dvc  approaching_mh_4.json.dvc  approaching_mm_1.json.dvc  approaching_mm_2.json.dvc  approaching_mm_3.json.dvc  approaching_mm_4.json.dvc  approaching_mm_h1.json.dvc  approaching_mm_h2.json.dvc  approaching_mm_h3.json.dvc  approaching_sh_1.json.dvc  approaching_sh_2.json.dvc  approaching_sh_3.json.dvc  approaching_sh_4.json.dvc
example_scripts/: dmp_trajectory_test.py  load_example_data.py  manual_test.py  player_demo_test.py  recording_demo_test.py
notebook/: pipeline.ipynb  report_plots.ipynb
results_generation/: door_maintenance_time_breakdown_table.py  factory_time_breakdown_table.py  results_generation_utils.py  statistical_significance.py
results_generation/performance_data/: performance.json
scripts/: plot_dmp.py
scripts/example_scripts/: dmp_trajectory_test.py  manual_test.py  player_demo_test.py  recording_demo_test.py
scripts/notebook/: report_plots.ipynb
scripts/results_generation/: compare.py  door_maintenance_time_breakdown_table.py  ebikon_data_scoring.py  generate_reproductions.py  gmcc_ebikon.py  gmcc_maintenance.py  maintenance_data_scoring.py  plot_trajectories.py  results_gmcc_metric.py
src/learning_from_demo/: aligned_trajectories.py  data_preprocessing.py  demonstration_player.py  demonstration_recorder.py  dmp_trajectory.py  (+5 more)
test/: manual_test.py
tests/: README.md  manual_test.py  playing_demo_test.py  recording_demo_test.py  test_data.py  test_dmp.py  test_gmm_fitting.py  test_player.py  test_preprocessing.py  test_trajectory.py
(+2652 files in other folders)
