[metadata]
name = rws2-package-Lorenzo
version = 0.0.1
author = Lorenzo Panchetti
author_email = lorenzo.panchetti@schindler.com
description = A package to control an ABB robot running RobotWare >= 7 which ships with
the new OmniCore controller generation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dev.azure.com/devsdb/CRD-NT_ARCO/_git/rws2
project_urls =
    Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src