[metadata]
name = learning_from_demo
version = 0.0.1
author = Lorenzo Panchetti
author_email = lorenzo.panchetti@schindler.com
description = Learning from demonstrations package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dev.azure.com/devsdb/CRD-NT_ARCO/_git/arco-learning-by-demonstration
project_urls =
    Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    keyboard>=0.13.5
    pandas>=1.3.5
    dtaidistance>=2.3.6
    scipy>=1.7.3
    matplotlib>=3.3.4
    scikit-learn>=0.24.2
    gmr>=1.6.2
    numpy>=1.22.1

[options.packages.find]
where = src