[metadata]
name = arco-control
version = 0.0.1
author = Lorenzo Panchetti
author_email = lorenzo.panchetti@schindler.com
description = A package to control an ABB robot running RobotWare >= 7
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dev.azure.com/devsdb/CRD-NT_ARCO/_git/arco-control
project_urls =
    Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    requests>=2.27.1
    xmltodict>=0.12.0
    keyboard>=0.13.5
    pandas>=1.3.5
    dtaidistance>=2.3.6
    scipy>=1.7.3
    matplotlib>=3.3.4
    scikit-learn>=0.24.2
    gmr>=1.6.2
    numpy>=1.22.1
    scikit-optimize>=0.9.0

[options.packages.find]
where = src